ecociel/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecociel-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: ecociel
