ecociel/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecociel-ingress
  namespace: ecociel
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: "hemidall.dev" # Change to your actual domain
    http:
      paths:
      - path: /ecociel
        pathType: Prefix
        backend:
          service:
            name: ecociel-ingress
            port:
              number: 80
